Fix out of misaligned buttons in stacked button group

--- a/src/components/UserConsent/style.scss
+++ b/src/components/UserConsent/style.scss
@@ -55,6 +55,7 @@
 
 .action.vertical {
   margin-top: 8 * $unit;
+  margin-right: 0;
   width: $lg-btn-width-lg-screen;
 }
 
